		Added protection during binkp receive for zero bytes compressed
		data frames, this will cause uncompress error -5 because zero
		bytes can't be compressed ar all.
		Fixed test for valid aka's in the EMSI handshake that prevented
		that host aka's (node /0) were not presented to the remote.
		(thanks Przemyslaw Kwiatkowski).
		Removed binkp extra debug logging and some standard dbug logging.

	mbsebbs:
		When a message is posted by a user, the CHRS kludge of the user
		is used in the message, not the area setting.
		When a user logs in, the users locale (guessed value from his
		characterset) is set. Experimental to see if libc functions will
		support Chinese characters.
		Allowed hi-ascii input characters in the internal fs editor,
		the chat input and one general input function. This may have
		effects for all users not using us-ascii keyboards.
		Added more support for Chinese using the traduce function.

	mbfido:
		Empty *.msg netmails for our own system are dropped with and
		logged (just like received empty netmails). Empty netmails to
		remote systems are still stored in the netmail base.
		Added debug logging for exporting netmails from the messagebase
		so that we later can decide to mark these messages auto deleted.

	mbnntp:
		Does now send the right mime headers recognised by news clients.
		Fixed compile problem with some compilers.
		When sending the mime header with the charset used to the news
		client, the original message charset is tried first, else the
		area charset, else the users charset and if all failed, we send
		the us-ascci charset as default.
		More patches added from Dmitry Komissaroff to improve charset
		support. Also improved msgid linking.

	mbtask:
		The created semafore files are now world readable so that low
		privileged users like nobody can check the semafore's.

	mbsetup:
		Added langugae defaults for Chinese.

	html:
		Added batch file upload written by Russell Tiedt to the faq.

	lang:
		Added Chinese language.
