@@ -129,8 +129,6 @@ mbcico:
 
 	N: Implement PLZ turn off m_get command.
 
-	N: Make workaround for binkp bug in Irex 2.24 upto 2.29
-
 mbfile:
 	L: Update <filespec> <area> <-touch>
 
